--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>FALE-CONOSCO</h2>
+<h3>ligue para saber mais informações</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Empresa de Fabricação de peças<br />
+    Rua Engenheiro Marco Covas, 1010<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    96969-2469
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">fixemichael.suporte@hotmail.com.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Matheustech@outlook.com</a>
 </address>
 
 {% endblock %}
