--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<h2>Empresa Automobilistica</h2>
-<h3>Fabricação de peças para caminhão carros e motos</h3>
+<h2>{{ title }}.</h2>
+<h3>{{ message }}</h3>
 
-<p>Esta aplicação fabrica peças</p>
+<p>Esta aplicação gerencia vestibulares.</p>
 
 {% endblock %}
